# SLDepthReconstruction

./: .gitignore  CMakeLists.txt  README.md  main.cpp  reconstructor.cpp  reconstructor.h  vertex_after.txt  vertex_before.txt  vertex_set.cpp  vertex_set.h
DataStructure/: intensity_slot.cpp  intensity_slot.h  node_set.cpp  node_set.h
global/: global_fun.cpp  global_fun.h  static_para.h
matlab_part/: CalculateEpiLine.m  CalibrateFoundamentalMatrix.m  FixPattern2Color.m  GenerateDepthRange.m  GenerateGif.m  ImageAnalysis.m  KMeansClassfication.m  LoadAndCheck.m  RGBChannalClassification.m  SinglePatternGeneration.m
optimizer/: color_consist_constraint.cpp  color_consist_constraint.h  deform_constraint.cpp  deform_constraint.h  deform_cost_functor.cpp  deform_cost_functor.h  depth_consist_constraint.cpp  depth_consist_constraint.h  depth_inter_constraint.cpp  depth_inter_constraint.h  depth_reg_constraint.cpp  depth_reg_constraint.h  depth_spacial_constraint.cpp  depth_spacial_constraint.h  depth_temporal_constraint.cpp  depth_temporal_constraint.h  regular_constraint.cpp  regular_constraint.h  regular_cost_functor.cpp  regular_cost_functor.h  shade_data_constraint.cpp  shade_data_constraint.h  shade_reg_constraint.cpp  shade_reg_constraint.h  spatial_constraint.cpp  spatial_constraint.h  temporal_constraint.cpp  temporal_constraint.h
